| Summary: | ASTERISK-30024: Failed to sign STIR/SHAKEN payload with functionality not enabled | ||||
| Reporter: | Claude Diderich (diderich) | Labels: | patch | ||
| Date Opened: | 2022-04-22 09:28:55 | Date Closed: | 2022-04-27 08:31:19 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_stir_shaken | ||
| Versions: | 18.11.2 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | openSUSE 15.3 | Attachments: | ( 0) ASTERISK-30024.diff | ||
| Description: | Since installing Asterisk 18.11.2, I receive the following ERROR messages in my log file. Functionality is not affected. I do not use the STIR functionality and have no certificates installed. The error messages were not generated with Asterisk 18.11.1.
Apr 22 13:21:20 joshua asterisk[25660]: ERROR[26970]: res_pjsip_stir_shaken.c:411 in add_identity_header: Failed to sign STIR/SHAKEN payload Apr 22 13:21:20 joshua asterisk[25660]: ERROR[26969]: res_stir_shaken.c:1196 in ast_stir_shaken_sign: Failed to retrieve certificate for caller ID '0444508166' | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2022-04-22 09:28:56.429-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Claude Diderich (diderich) 2022-04-23 09:21:19.353-0500 ~seanbright do you still need my pjsip.conf file? By: Sean Bright (seanbright) 2022-04-23 10:10:58.999-0500 No. We’ve been able to reproduce the issue already. By: Benjamin Keith Ford (bford) 2022-04-25 11:01:52.241-0500 [~diderich] I've attached a patch that should fix the issue. Would you be willing to test it out and report if the problem has been resolved or not? By: Claude Diderich (diderich) 2022-04-26 00:58:23.679-0500 ~bford. Sorry, but I am using a pre-compiled version distributed as a package through an openSUSE repository. I am unable to compile asterisk myself and as such, although I value your input, I cannot actually test it. By: Friendly Automation (friendly-automation) 2022-04-26 11:10:51.639-0500 Change 18414 merged by Benjamin Keith Ford: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18414|https://gerrit.asterisk.org/c/asterisk/+/18414] By: Friendly Automation (friendly-automation) 2022-04-26 11:11:02.585-0500 Change 18434 merged by Benjamin Keith Ford: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18434|https://gerrit.asterisk.org/c/asterisk/+/18434] By: Friendly Automation (friendly-automation) 2022-04-26 11:11:12.614-0500 Change 18435 merged by Benjamin Keith Ford: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18435|https://gerrit.asterisk.org/c/asterisk/+/18435] By: Friendly Automation (friendly-automation) 2022-04-26 11:11:23.627-0500 Change 18437 merged by Benjamin Keith Ford: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18437|https://gerrit.asterisk.org/c/asterisk/+/18437] By: Friendly Automation (friendly-automation) 2022-04-26 11:11:35.178-0500 Change 18438 merged by Benjamin Keith Ford: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18438|https://gerrit.asterisk.org/c/asterisk/+/18438] By: Friendly Automation (friendly-automation) 2022-04-26 11:11:45.416-0500 Change 18439 merged by Benjamin Keith Ford: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18439|https://gerrit.asterisk.org/c/asterisk/+/18439] By: Friendly Automation (friendly-automation) 2022-04-26 11:12:01.915-0500 Change 18436 merged by Benjamin Keith Ford: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18436|https://gerrit.asterisk.org/c/asterisk/+/18436] By: Friendly Automation (friendly-automation) 2022-04-26 13:16:42.974-0500 Change 18443 merged by Joshua Colp: res_pjsip_stir_shaken.c: Fix enabled when not configured. [https://gerrit.asterisk.org/c/asterisk/+/18443|https://gerrit.asterisk.org/c/asterisk/+/18443] By: Claude Diderich (diderich) 2022-04-27 08:29:10.030-0500 I can confirm that the error message no longer appears. By: Asterisk Team (asteriskteam) 2022-04-27 08:29:10.204-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. | ||||